fix subpixel frame overlapping

--- a/Card.css
+++ b/Card.css
@@ -23,11 +23,10 @@
 
 .card-image img {
    position: absolute;
-}
-
-.card-image-inactive img {
-   width: 100%;
-   height: 100%;
+   top: -1px;
+   left: -1px;
+   width: calc(100% * var(--columns, 1) + 2px);
+   height: calc(100% * var(--rows, 1) + 2px);
 }
 
 .card-image-active {
